# murasaki

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_client.rs  commands.rs  config.rs  database.rs  launcher.rs  main.rs  search.rs  types.rs
src-tauri/src/api/: api_client.rs
src-tauri/src/common/: database.rs  types.rs
src-tauri/src/dashboard/: commands.rs  database.rs  types.rs
src-tauri/src/launcher/: commands.rs  database.rs  mod.rs  service.rs
src-tauri/src/search/: commands.rs  service.rs  types.rs
src-tauri/src/settings/: commands.rs  service.rs  types.rs
src-tauri/src/types/: api.rs  common.rs  database.rs  mod.rs
src/lib/: ContentDialog.svelte  ContentView.svelte  Database.svelte  HeatMap.svelte  Library.svelte  Search.svelte  SearchBar.svelte  Settings.svelte  StatsCard.svelte
src/lib/components/content/: AnimeContent.svelte  ContentDialog.svelte  VnContent.svelte
src/lib/components/ui/: HeatMap.svelte  SearchBar.svelte  StatsCard.svelte
src/lib/components/ui/dialog/: dialog-header.svelte
src/lib/stores/: library-state.svelte.ts  search-state.svelte.ts  stats-state.svelte.ts  view-state.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/anime/: +page.svelte  AnimeControls.svelte
src/routes/other/: +page.svelte
src/routes/search/: +page.svelte  SearchSkeleton.svelte  SearchView.svelte
src/routes/settings/: +page.svelte
src/routes/vn/: +page.svelte  VnControls.svelte
src/types/: config.ts  content.ts  stats.ts
