[package]
name = "murasaki"
version = "0.1.0"
authors = ["hunter root"]
repository = "https://github.com/muheii/murasaki"
default-run = "murasaki"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
directories = "5.0"
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2"
winapi = { version = "0.3", features = ["winbase"] }
chrono = "0.4.39"
anyhow = "1.0.95"
anyhow-tauri = "1.0.0"
regex = "1.11.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
